// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/backdrop/Backdrop Customized 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "backgroundColor": "#717171",
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
          "zIndex": 1,
        },
        Object {
          "backgroundColor": "#C63733",
        },
        Object {
          "opacity": 0,
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "height": "100%",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Storyshots components/backdrop/Backdrop Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      undefined,
    ]
  }
>
  <View
    pointerEvents="auto"
    style={
      Array [
        Object {
          "backgroundColor": "#717171",
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 750,
          "zIndex": 1,
        },
        undefined,
        Object {
          "opacity": 0,
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "width": "100%",
          },
          Object {
            "height": "100%",
          },
        ]
      }
    />
  </View>
</View>
`;
